--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<HTML>
-    <head>
-       <title>loja do lucas</title>
-    </head>
-    <body>
-        <!--fala galerinha da minha loja-->
-         <p>este<a href="https://www.youtube.com">link</a> vai para o youtube!</p>
-         <img src="fla.png" />
-    </body>
-</HTML>
+<!DOCTYPE HTML>
+
+
+<title>Loja do Flamengo</title>
+
+
+<h1>camisa original do flamengo $300</h1>
+<h1>camisa branca do flamengo $240</h1>
+<h1>camisa amarela do flamengo $200</h1>
