--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <!-- <svg viewBox="0 0 192 65" class="shopee-svg-icon header-with-search__shopee-logo icon-shopee-logo">
         </svg> -->
       <!-- Logo goes here -->
-      <img src="logo empresa do lucas.png" alt="Description" style="width: 100px; height: 80px;">
+      <img src="logo empresa do lucas.png" alt="Description" style="width: 120px; height: 100px; position: relative; top:-20px; left:-20px">
 
 
       </div>
