--- a/table.html/segunda.ideia.index.html
+++ b/table.html/segunda.ideia.index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Minha Loja</title>
+  <title>Lucrazy</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -58,24 +58,24 @@
 
   <div class="produtos">
     <div class="produto">
-      <img src="https://via.placeholder.com/150" alt="Produto 1">
+      <img src="segunda ideia.png" alt="Produto 1">
       <h3>Camisa do flamengo original</h3>
       <p>R$ 249,98</p>
-      <button class="btn" onclick="adicionar('Camisa Legal', 49.90)">Adicionar</button>
+      <button class="btn" onclick="adicionar('camisa do flamengo original', 249,98)">Adicionar</button>
     </div>
 
     <div class="produto">
-      <img src="https://via.placeholder.com/150" alt="Produto 2">
+      <img src="bone.webp" alt="Produto 2">
       <h3>Boné do flamengo</h3>
       <p>R$ 89,99</p>
-      <button class="btn" onclick="adicionar('Boné Estiloso', 29.90)">Adicionar</button>
+      <button class="btn" onclick="adicionar('bone do flamengo', 89,99)">Adicionar</button>
     </div>
 
     <div class="produto">
-      <img src="https://via.placeholder.com/150" alt="Produto 3">
+      <img src="jens.webp" alt="Produto 3">
       <h3>Calça Jeans</h3>
       <p>R$ 69,90</p>
-      <button class="btn" onclick="adicionar('Calça Jeans', 99.90)">Adicionar</button>
+      <button class="btn" onclick="adicionar('calca jeans', 69,90)">Adicionar</button>
     </div>
   </div>
 
